Update API_URL to include '/docs' path

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <script>
       // 🔴 GANTI URL INI
-      const API_URL = "https://elicitable-syreeta-vexatiously.ngrok-free.dev";
+      const API_URL = "https://elicitable-syreeta-vexatiously.ngrok-free.dev/docs";
 
       async function prediksi() {
         const belajar = document.getElementById("belajar").value;
